# sfml-simple-paint

./: CMakeLists.txt  README.md  test.cpp
src/: app.cpp  app.h  debug.h  main.cpp  utils.h
src/Drawables/: CustomRectangle.h  CustomRectangleShape.cpp  CustomRectangleShape.h  CustomShape.h
src/Entity/: EntityTypes.h  entity.h
src/Paint/: Brush.cpp  Brush.h  BrushController.cpp  BrushController.h  BrushLogic.cpp  BrushLogic.h  Canvas.cpp  Canvas.h  CanvasLogic.h  Toolbar.cpp  Toolbar.h
src/PaintUI/: BrushControllerUI.cpp  BrushControllerUI.h  BrushLogicUI.cpp  BrushLogicUI.h  Button.cpp  Button.h  TextLabel.cpp  TextLabel.h  ToolbarUI.cpp  ToolbarUI.h
src/PaintUIComponents/: BrushColorPallete.cpp  BrushColorPallete.h  BrushLogicUI.cpp  BrushLogicUI.h  BrushShapes.cpp  BrushShapes.h  BrushSizeIncrement.cpp  BrushSizeIncrement.h  UIConfig.h
src/PaintUX/: InputHandler.h
src/UIComponents/: Button.cpp  Button.h  HorizontalSlider.h  TextLabel.cpp  TextLabel.h  UIEntityContainerComponent.cpp  UIEntityContainerComponent.h
src/UIComponents/Buttons/: ButtonBase.cpp  ButtonBase.h  ColorPalleteButton.cpp  ColorPalleteButton.h  RectangleButton.cpp  RectangleButton.h  StandardButton.cpp  StandardButton.h
time/: hacker.cpp
